fix: Resolve cgroup v2 compatibility issue in GitHub CI
GitHub Actions ubuntu-latest runner uses cgroup v2 (Ubuntu 22.04+),
which causes Java 11+ to throw NullPointerException when detecting
cgroup v2 subsystems in containerized environments.

This fix adds JVM --add-opens options via SPARK_DRIVER_OPTS environment
variable to bypass the cgroup v2 detection issue in Spark containers.

Fixes E2E test failures on Spark v3.1.3, v3.2.4, v3.3.3, v3.4.4, v3.5.5

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>